changes to notebooks and data file

--- a/l4e_notebooks/3_model_training.ipynb
+++ b/l4e_notebooks/3_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5382d829",
+   "id": "c688b9c4",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23a1d71",
+   "id": "99aeee28",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -21,9 +21,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b2b78f",
+   "id": "f1a95b39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "boto3 version: 1.18.28 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
@@ -35,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2aade9",
+   "id": "34776cb9",
    "metadata": {},
    "source": [
     "### Imports"
@@ -43,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d974b10",
+   "execution_count": 1,
+   "id": "14d20e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +74,7 @@
     "import pandas as pd\n",
     "import sagemaker\n",
     "import sys\n",
-    "\n",
+    "import boto3\n",
     "# Helper functions for managing Lookout for Equipment API calls:\n",
     "sys.path.append('../utils')\n",
     "import lookout_equipment_utils as lookout"
@@ -61,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7437171b",
+   "execution_count": 2,
+   "id": "942cbffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ab176e",
+   "id": "41bec3fe",
    "metadata": {},
    "source": [
     "Based on the label time ranges, we will use the following time ranges:\n",
@@ -87,10 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bec95538",
+   "execution_count": 3,
+   "id": "3f50fb2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Training period | from 2019-01-01 00:00:00 to 2019-07-31 00:00:00\n",
+      "Evaluation period | from 2019-08-01 00:00:00 to 2019-10-27 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuring time ranges:\n",
     "training_start   = pd.to_datetime('2019-01-01 00:00:00')\n",
@@ -104,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be742b7f",
+   "id": "0b1283d6",
    "metadata": {},
    "source": [
     "## Model training\n",
@@ -113,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "12b60090",
+   "execution_count": 4,
+   "id": "7ca15cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0a2bea",
+   "id": "ba900209",
    "metadata": {},
    "source": [
     "The following method encapsulates a call to the [**CreateModel**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_CreateModel.html) API:"
@@ -152,10 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a78a13d6",
+   "execution_count": 5,
+   "id": "52f555a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ModelArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:model/27b53ba8-baa0-4298-809a-0afe9384c280-model/dbd392aa-28d0-47a9-8b7a-4b44a4eafeae',\n",
+       " 'Status': 'IN_PROGRESS',\n",
+       " 'ResponseMetadata': {'RequestId': '74ab2edd-6904-4fb6-bd66-62ab22304599',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '74ab2edd-6904-4fb6-bd66-62ab22304599',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '171',\n",
+       "   'date': 'Fri, 03 Sep 2021 02:49:51 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Actually create the model and train it:\n",
     "lookout_model.train()"
@@ -163,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed35c69",
+   "id": "dfaa02ac",
    "metadata": {},
    "source": [
     "A training is now in progress as captured by the console:\n",
@@ -179,17 +228,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c423f3ec",
+   "execution_count": 6,
+   "id": "9670c2ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-09-03 02:50:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:51:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:52:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:53:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:54:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:55:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:56:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:57:53 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:58:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 02:59:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:00:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:01:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:02:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:03:54 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:04:55 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:05:55 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:06:55 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:07:55 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:08:55 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:09:56 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:10:56 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:11:56 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:12:56 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:13:56 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:14:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:15:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:16:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:17:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:18:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:19:57 | Model training: IN_PROGRESS\n",
+      "2021-09-03 03:20:57 | Model training: SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "lookout_model.poll_model_training(sleep_time=60)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8e4de9c",
+   "id": "bb3acc36",
    "metadata": {},
    "source": [
     "A model is now trained and we can visualize the results of the back testing on the evaluation window selected at the beginning on this notebook:\n",
@@ -199,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a259d487",
+   "id": "925a4410",
    "metadata": {},
    "source": [
     "In the console, **you can click on each detected event**: Amazon Lookout for Equipment unpacks the ranking and display the top sensors contributing to the detected events.\n",
@@ -211,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945d83ad",
+   "id": "49759d45",
    "metadata": {},
    "source": [
     "This dataset contains 30 sensors:\n",
@@ -222,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdff89e1",
+   "id": "e0ab0448",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -231,10 +318,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b2ce19c",
+   "execution_count": 7,
+   "id": "f66e820b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "<span style=\"color:green\"><span style=\"font-size:50px\">**Success!**</span></span>\n",
+       "<br/>\n",
+       "In this notebook, we use the dataset created in part 2 of this notebook series and trained an Amazon Lookout for Equipment model.\n",
+       "\n",
+       "From here you can either head:\n",
+       "* To the next notebook where we will **extract the evaluation data** for this model and use it to perform further analysis on the model results: this is optional and just gives you some pointers on how to post-process and visualize the data provided by Amazon Lookout for Equipment.\n",
+       "* Or to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Needed for visualizing markdowns programatically\n",
     "from IPython.display import display, Markdown\n",
@@ -250,6 +357,14 @@
     "* Or to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results.\n",
     "'''))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e094164",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
