--- a/l4e_notebooks/2_dataset_creation.ipynb
+++ b/l4e_notebooks/2_dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "985a6998",
+   "id": "ba55e8b0",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f894e24",
+   "id": "840a63b0",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -21,9 +21,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52220e77",
+   "id": "41f7cc9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 21.1.3; however, version 21.2.4 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/python3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "boto3 version: 1.18.28 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "!pip install --quiet sagemaker==2.46.1 tqdm==4.62.1\n",
     "\n",
@@ -37,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb20d4d4",
+   "id": "4b61ba0d",
    "metadata": {},
    "source": [
     "### Imports"
@@ -45,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f7db956",
+   "execution_count": 1,
+   "id": "1fe698c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +79,7 @@
     "import sagemaker\n",
     "import sys\n",
     "import time\n",
-    "\n",
+    "import boto3\n",
     "from datetime import datetime\n",
     "\n",
     "# Helper functions for managing Lookout for Equipment API calls:\n",
@@ -66,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e82c7259",
+   "execution_count": 2,
+   "id": "02654c0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,10 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "47ef57df",
+   "execution_count": 3,
+   "id": "f07008ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['centrifugal-pump']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List of the directories from the training data \n",
     "# directory: each directory corresponds to a subsystem:\n",
@@ -102,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "966ab247",
+   "id": "fa68b3e4",
    "metadata": {},
    "source": [
     "## Create a dataset\n",
@@ -111,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a947773e",
+   "id": "52de609c",
    "metadata": {},
    "source": [
     "### Create data schema"
@@ -119,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a454e8",
+   "id": "f0a83c7c",
    "metadata": {},
    "source": [
     "First we need to setup the schema of your dataset. In the cell below, we define `DATASET_COMPONENT_FIELDS_MAP`. `DATASET_COMPONENT_FIELDS_MAP` is a Python dictonary (hashmap). The key of each entry in the dictionary is the `Component` name, and the value of each entry is a list of column names. The column names must exactly match the header in your CSV files. The order of the column names also need to exactly match:\n",
@@ -165,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c59bb94",
+   "execution_count": 4,
+   "id": "c6d6e628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335d7898",
+   "id": "b3f6ad6a",
    "metadata": {},
    "source": [
     "If you wanted to use the console, the following string would be the one to use to configure the **dataset schema**:\n",
@@ -202,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7b7445",
+   "id": "42191750",
    "metadata": {},
    "source": [
     "### Create the dataset\n",
@@ -220,17 +254,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "04c7399f",
+   "execution_count": 5,
+   "id": "48587f07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset \"27b53ba8-baa0-4298-809a-0afe9384c280\" does not exist, creating it...\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'DatasetName': '27b53ba8-baa0-4298-809a-0afe9384c280',\n",
+       " 'DatasetArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:dataset/27b53ba8-baa0-4298-809a-0afe9384c280/3359ff20-cc69-484d-902a-cc09577d6eff',\n",
+       " 'Status': 'CREATED',\n",
+       " 'ResponseMetadata': {'RequestId': '55af057a-dacb-459b-a877-b75ff340e5c2',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '55af057a-dacb-459b-a877-b75ff340e5c2',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '218',\n",
+       "   'date': 'Fri, 03 Sep 2021 02:42:50 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lookout_dataset.create()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f13e3976",
+   "id": "0983ab19",
    "metadata": {},
    "source": [
     "The dataset is now created, but it is empty and ready to receive some timeseries data that we will ingest from the S3 location prepared in the previous notebook:"
@@ -238,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5ac0dd",
+   "id": "71495fca",
    "metadata": {},
    "source": [
     "![Dataset created](assets/dataset-created.png)"
@@ -246,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2272cacb",
+   "id": "6957196c",
    "metadata": {},
    "source": [
     "## Ingest data into a dataset\n",
@@ -256,17 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca1e916b",
+   "execution_count": 6,
+   "id": "8d0d8b80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('arn:aws:iam::593512547852:role/LookoutForEquipmentSitewisePipeli-SageMakerIamRole-1MJQSDGDJXJTP',\n",
+       " 'l4esitewisejjhj-asset1-train-inference',\n",
+       " '27b53ba8-baa0-4298-809a-0afe9384c280/training-data/',\n",
+       " '27b53ba8-baa0-4298-809a-0afe9384c280')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ROLE_ARN, BUCKET, PREFIX, DATASET_NAME"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5dcf2769",
+   "id": "6b67236d",
    "metadata": {},
    "source": [
     "Launch the ingestion job in the Lookout for Equipment dataset: the following method encapsulates the [**StartDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_StartDataIngestionJob.html) API:\n",
@@ -287,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "922fe1af",
+   "execution_count": 7,
+   "id": "9495a4ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393e65f1",
+   "id": "f7c5c06f",
    "metadata": {},
    "source": [
     "The ingestion is launched. With this amount of data (around 50 MB), it should take between less than 5 minutes:\n",
@@ -307,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184460c1",
+   "id": "ec1e29c2",
    "metadata": {},
    "source": [
     "We use the following cell to monitor the ingestion process by calling the [**DescribeDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_DescribeDataIngestionJob.html) API every 60 seconds:"
@@ -315,10 +391,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab373f33",
+   "execution_count": 8,
+   "id": "3bd224ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====Polling Data Ingestion Status=====\n",
+      "\n",
+      "2021-09-03 02:42:56 | IN_PROGRESS\n",
+      "2021-09-03 02:43:56 | IN_PROGRESS\n",
+      "2021-09-03 02:44:56 | IN_PROGRESS\n",
+      "2021-09-03 02:45:56 | IN_PROGRESS\n",
+      "2021-09-03 02:46:56 | IN_PROGRESS\n",
+      "2021-09-03 02:47:56 | SUCCESS\n",
+      "\n",
+      "=====End of Polling Data Ingestion Status=====\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the ingestion job ID and status:\n",
     "data_ingestion_job_id = response['JobId']\n",
@@ -340,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db2ad78",
+   "id": "60b31eac",
    "metadata": {},
    "source": [
     "In case any issue arise, you can inspect the API response available as a JSON document:"
@@ -348,17 +441,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd52d08d",
+   "execution_count": 9,
+   "id": "a407fe7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'JobId': 'dfd3b0718667480afda43f8341b5eaec',\n",
+       " 'DatasetArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:dataset/27b53ba8-baa0-4298-809a-0afe9384c280/3359ff20-cc69-484d-902a-cc09577d6eff',\n",
+       " 'IngestionInputConfiguration': {'S3InputConfiguration': {'Bucket': 'l4esitewisejjhj-asset1-train-inference',\n",
+       "   'Prefix': '27b53ba8-baa0-4298-809a-0afe9384c280/training-data/'}},\n",
+       " 'RoleArn': 'arn:aws:iam::593512547852:role/LookoutForEquipmentSitewisePipeli-SageMakerIamRole-1MJQSDGDJXJTP',\n",
+       " 'CreatedAt': datetime.datetime(2021, 9, 3, 2, 42, 54, 278000, tzinfo=tzlocal()),\n",
+       " 'Status': 'SUCCESS',\n",
+       " 'ResponseMetadata': {'RequestId': '3dea73af-cc01-41ab-8153-d4bb64a7326f',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '3dea73af-cc01-41ab-8153-d4bb64a7326f',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '515',\n",
+       "   'date': 'Fri, 03 Sep 2021 02:49:08 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lookout_client.describe_data_ingestion_job(JobId=data_ingestion_job_id)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "757b7547",
+   "id": "bb218bc8",
    "metadata": {},
    "source": [
     "The ingestion should now be complete as can be seen in the console:\n",
@@ -368,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc8badf8",
+   "id": "554cd6d5",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -377,10 +494,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02e037d0",
+   "execution_count": 10,
+   "id": "0843e15e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "<span style=\"color:green\"><span style=\"font-size:50px\">**Success!**</span></span>\n",
+       "<br/>\n",
+       "In this notebook, we created a **Lookout for Equipment dataset** and ingested the S3 data previously uploaded into this dataset. **Move now to the next notebook to train a model based on these data.**\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Needed for visualizing markdowns programatically\n",
     "from IPython.display import display, Markdown\n",
@@ -392,6 +525,14 @@
     "In this notebook, we created a **Lookout for Equipment dataset** and ingested the S3 data previously uploaded into this dataset. **Move now to the next notebook to train a model based on these data.**\n",
     "'''))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2054ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
